# RAGLite

./: ENHANCEMENT_SUMMARY.md  README.md  SYSTEM_REPORT.md  runner.py
contexttape/: .gitignore  BEFORE_AFTER.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTENSION_CHANGE.md  GETTING_STARTED.md  INSTALLATION_DIAGRAM.md  ORGANIZATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  SIMPLE_GUIDE.md  WHAT_YOU_GET.md  WHERE_DATA_GOES.md  WIKIPEDIA_TESTING.md  cleanup_stores.sh  example_pip_usage.py  example_topics.txt  mkdocs.yml  pyproject.toml  quickstart.sh  requirements.txt  run_test.sh  seed_multimodal_corpus.py  test_complete_setup.py  test_system.py  test_wikipedia.py  topics.txt  verify_setup.py
contexttape/.github/workflows/: ci.yml  docs.yml  publish.yml
contexttape/data/chat/: segment_0.is  segment_1.is  segment_2.is  segment_3.is
contexttape/data/wiki/: segment_0.is  segment_1.is  segment_2.is  segment_3.is  segment_4.is  segment_5.is
contexttape/data/wiki_cli/: segment_0.is  segment_1.is  segment_2.is  segment_3.is
contexttape/data/wiki_test/: segment_0.is  segment_1.is  segment_2.is  segment_3.is  segment_4.is  segment_5.is  segment_6.is  segment_7.is
contexttape/docs/: cli.md  index.md  python_api.md  quickstart.md  requirements-docs.txt
contexttape/examples/: advanced_usage.py  comprehensive_examples.py  quickstart.py  tutorial.py
contexttape/sample_corpus/: doc.json  glossary.csv  http_https.md  kb_index.json  notes.md  readme.txt  renaissance_art.md  table.csv
contexttape/scripts/: gen_docs.py  topics.example.txt
contexttape/src/contexttape/: __init__.py  benchmark.py  chat.py  cli.py  config.py  embed.py  energy.py  ingest_any.py  ingest_generic.py  ingest_wiki.py  integrations.py  relevance.py  search.py  storage.py  utils.py
contexttape/tests/: test_integration.py  test_storage.py
