[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "contexttape"
description = "File-based RAG: Database-free vector storage for Retrieval-Augmented Generation. Store embeddings in .is files, no vector DB needed. Simple, portable, git-friendly."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nu Terra Labs", email = "info@nuterralabs.com" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "vector-database",
    "vector-search",
    "embeddings",
    "llm",
    "ai",
    "machine-learning",
    "nlp",
    "semantic-search",
    "file-based-storage",
    "database-free",
    "lightweight",
    "portable",
    "rag-storage",
    "rag-database",
    "vector-store",
    "embedding-store",
    "openai",
    "chatgpt"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
version = "0.5.0"

dependencies = [
  "numpy>=1.24.0",
  "openai>=1.40.0",
  "tiktoken>=0.7.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.3",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]        # for PDF text extraction in ingest_any
energy = ["pyRAPL>=0.2.3"]     # for energy monitoring (Intel platforms only)
all = [
    "pymupdf>=1.24",
    "pyRAPL>=0.2.3",
]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "build>=1.2.1",
  "twine>=5.1.0",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/NuTerraLabs/contexttape"
Documentation = "https://nuterralabs.github.io/contexttape"
Repository = "https://github.com/NuTerraLabs/contexttape"
Issues = "https://github.com/NuTerraLabs/contexttape/issues"
Changelog = "https://github.com/NuTerraLabs/contexttape/blob/main/CHANGELOG.md"

[project.scripts]
ct = "contexttape.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools_scm]
# Uses git tags like v0.4.0 for version. If no tag, it appends a local version.

[tool.ruff]
line-length = 100
